--- a/index.html
+++ b/index.html
@@ -1,3 +1,50 @@
+<!DOCTYPE html>
 <html>
-teste
+	<head>
+		<!--Import Google Icon Font-->
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<!--Import materialize.css-->
+		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+		<link type="text/css" rel="stylesheet" href="css/estilo.css"/>
+		
+		<!--Let browser know website is optimized for mobile-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	</head>
+
+	<body>
+		<!-- Navbar goes here -->
+		
+		<nav>
+			<div class="nav-wrapper">
+				<a href="#" class="right brand-logo">Logo</a>
+				<ul id="nav-mobile" class="left hide-on-med-and-down">
+					<li><a href="sass.html">Sass</a></li>
+					<li><a href="badges.html">Components</a></li>
+					<li><a href="collapsible.html">JavaScript</a></li>
+				</ul>
+			</div>
+		</nav>
+		
+		<!-- Page Layout here -->
+		<div class="row linha-colunas">
+
+			<div class="col s3 red">
+				<!-- Grey navigation panel -->
+				asdteste<br>
+				teste<br>
+				teste<br>
+			</div>
+
+			<div class="col s9 blue">
+				<!-- Teal page content  -->
+				asdteste<br>
+				teste<br>
+			</div>
+
+		</div>
+	
+		<!--JavaScript at end of body for optimized loading-->
+		<script type="text/javascript" src="js/materialize.min.js"></script>
+		<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	</body>
 </html>
