--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
 							<p class="margin medium-small"><a href="#">Registre-se!</a></p>
 						</div>
 						<div class="input-field col s6 m6 l6">
-							<p class="margin right-align medium-small"><a href="#">Esqueci a senha?</a></p>
+							<p class="margin right-align medium-small"><a href="#modal-recuperar-senha" class="modal-trigger">Esqueci a senha?</a></p>
 						</div>          
 					</div>
 					
@@ -52,6 +52,24 @@
 			</div>
 		</div>
 
+		<!-- Modal Structure @RECUPERAR SENHA -->
+		<div id="modal-recuperar-senha" class="modal">
+			<div class="modal-content">
+				<h4>Recuperar Senha</h4>
+				<p>Informe o e-mail cadastrado para que seja enviado o link de recuperação com a nova senha.</p>
+				<div class="row">
+					<div class="input-field col s12">
+						<i class="material-icons prefix">mail_outline</i>
+						<input class="validate" id="email-recup" type="email">
+						<label for="email-recup" data-error="wrong" data-success="right">E-mail cadastrado</label>
+					</div>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<a id="btnEnviar" class="modal-close waves-effect waves-green btn">Enviar</a>
+			</div>
+		</div>
+		
 		<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 		<script type="text/javascript" src="js/materialize.min.js"></script>
 		<script type="text/javascript" src="js/login.js"></script>
