--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 				<form class="login-form">
 				
 					<div class="row">
-						<< COLOCAR TITULO PARA O SISTEMA >>
+						COLOCAR TITULO PARA O SISTEMA
 					</div>
 					
 					<div class="row">
