--- a/principal.html
+++ b/principal.html
@@ -5,7 +5,7 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!--Import materialize.css-->
 		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-		<link type="text/css" rel="stylesheet" href="css/estilo.css"/>
+		<link type="text/css" rel="stylesheet" href="css/principal.css"/>
 		
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -54,33 +54,49 @@
 
 
 			<!-- Dropdown Structure @MENU -->
-			<ul id="dropdown1" class="dropdown-content">
+			<ul id="drop-cadastros" class="dropdown-content">
+				<li><a href="#!">one</a></li>
+				<li><a href="#!">two</a></li>
+				<li class="divider"></li>
+				<li><a href="#!">tree</a></li>
+			</ul>
+			<ul id="drop-inventarios" class="dropdown-content">
+				<li><a href="#!">one</a></li>
+				<li><a href="#!">two</a></li>
+				<li class="divider"></li>
+				<li><a href="#!">tree</a></li>
+			</ul>
+			<ul id="drop-perfil" class="dropdown-content">
 				<li><a href="#!">one</a></li>
 				<li><a href="#!">two</a></li>
 				<li class="divider"></li>
 				<li><a href="#modal-trocar-senha" class="modal-trigger">Trocar Senha</a></li>
 				<li><a href="#modal-sair" class="modal-trigger">Sair</a></li>
 			</ul>
-
+			<!-- Dropdown Trigger -->
 			<nav>
 				<div class="nav-wrapper">
-					<a href="#!" class="right brand-logo">Logo</a>
+					<a href="#!" class="right brand-logo">Sistema de Inventário</a>
 					<ul class="left hide-on-med-and-down">
-						<li><a href="sass.html">Sass</a></li>
-						<li><a href="badges.html">Components</a></li>
-						<!-- Dropdown Trigger -->
 						<li>
-							<a class="dropdown-trigger" href="#!" data-target="dropdown1">
-								Meu Perfil
-								<i class="material-icons right">arrow_drop_down</i>
+							<a class="dropdown-trigger" href="#!" data-target="drop-cadastros">
+							Cadastros<i class="material-icons right">arrow_drop_down</i>
+							</a>
+						</li>
+						<li>
+							<a class="dropdown-trigger" href="#!" data-target="drop-inventarios">
+								Inventários<i class="material-icons right">arrow_drop_down</i>
+							</a>
+						</li>
+						<li>
+							<a class="dropdown-trigger" href="#!" data-target="drop-perfil">
+								Meu Perfil<i class="material-icons right">arrow_drop_down</i>
 							</a>
 						</li>
 					</ul>
 				</div>
 			</nav>
-		
 		<!-- Page Layout here -->
-
 		<input type="text" id="nome">
 		<input type="text" id="id_usuario">
 		
